errorlog-20190615-173254+0600-1560598374-32-32-1.log

Turn 1
================================================================
error: failed to decode bot message: "i" (at position 5)
Last input received was:
    import hlt
         ^
SyntaxError: invalid syntax

